--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       title="roaringkitty &raquo; Feed"
       href="https://roaringkittyspl.com/feed/"
     />
+
     <link
       rel="alternate"
       type="application/rss+xml"
@@ -177,6 +178,9 @@
             }));
       })((window, document), window._wpemojiSettings);
     </script>
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap");
+    </style>
     <style id="wp-emoji-styles-inline-css">
       img.wp-smiley,
       img.emoji {
@@ -1882,6 +1886,7 @@
                           </style>
                           <h2
                             class="elementor-heading-title elementor-size-default"
+                            style="font-family: 'Orbitron', sans-serif"
                           >
                             ETHA
                           </h2>
@@ -2268,6 +2273,7 @@
                                 <div class="elementor-widget-container">
                                   <h2
                                     class="elementor-heading-title elementor-size-default"
+                                    style="font-family: 'Orbitron', sans-serif"
                                   >
                                     About $ETHA
                                   </h2>
@@ -2439,6 +2445,7 @@
                         <div class="elementor-widget-container">
                           <h2
                             class="elementor-heading-title elementor-size-default"
+                            style="font-family: 'Orbitron', sans-serif"
                           >
                             HOW TO BUY
                           </h2>
@@ -2517,6 +2524,10 @@
                                         <div class="elementor-widget-container">
                                           <h2
                                             class="elementor-heading-title elementor-size-default"
+                                            style="
+                                              font-family: 'Orbitron',
+                                                sans-serif;
+                                            "
                                           >
                                             Create a Wallet
                                           </h2>
@@ -2710,6 +2721,10 @@
                                         <div class="elementor-widget-container">
                                           <h2
                                             class="elementor-heading-title elementor-size-default"
+                                            style="
+                                              font-family: 'Orbitron',
+                                                sans-serif;
+                                            "
                                           >
                                             Get Some ETH
                                           </h2>
@@ -2814,6 +2829,10 @@
                                         <div class="elementor-widget-container">
                                           <h2
                                             class="elementor-heading-title elementor-size-default"
+                                            style="
+                                              font-family: 'Orbitron',
+                                                sans-serif;
+                                            "
                                           >
                                             Go to Uniswap
                                           </h2>
@@ -2932,6 +2951,10 @@
                                         <div class="elementor-widget-container">
                                           <h2
                                             class="elementor-heading-title elementor-size-default"
+                                            style="
+                                              font-family: 'Orbitron',
+                                                sans-serif;
+                                            "
                                           >
                                             Switch ETH for $ETHA
                                           </h2>
@@ -3021,6 +3044,7 @@
                         <div class="elementor-widget-container">
                           <h2
                             class="elementor-heading-title elementor-size-default"
+                            style="font-family: 'Orbitron', sans-serif"
                           >
                             $ETHA TOKENOMICS
                           </h2>
@@ -3050,7 +3074,11 @@
                                 data-widget_type="text-editor.default"
                               >
                                 <div class="elementor-widget-container">
-                                  <p>Total Supply</p>
+                                  <p
+                                    style="font-family: 'Orbitron', sans-serif"
+                                  >
+                                    Total Supply
+                                  </p>
                                 </div>
                               </div>
                               <div
@@ -3109,7 +3137,11 @@
                                 data-widget_type="text-editor.default"
                               >
                                 <div class="elementor-widget-container">
-                                  <p>Taxes</p>
+                                  <p
+                                    style="font-family: 'Orbitron', sans-serif"
+                                  >
+                                    Taxes
+                                  </p>
                                 </div>
                               </div>
                               <div
@@ -3157,7 +3189,11 @@
                                 data-widget_type="text-editor.default"
                               >
                                 <div class="elementor-widget-container">
-                                  <p>Liquidity</p>
+                                  <p
+                                    style="font-family: 'Orbitron', sans-serif"
+                                  >
+                                    Liquidity
+                                  </p>
                                 </div>
                               </div>
                               <div
@@ -3254,7 +3290,10 @@
                 data-widget_type="heading.default"
               >
                 <div class="elementor-widget-container">
-                  <h2 class="elementor-heading-title elementor-size-default">
+                  <h2
+                    class="elementor-heading-title elementor-size-default"
+                    style="font-family: 'Orbitron', sans-serif"
+                  >
                     Join the community
                   </h2>
                 </div>
