--- a/index.html
+++ b/index.html
@@ -1785,6 +1785,7 @@
                               href="buylink"
                               target="_blank"
                               data-text="$ETHA"
+                              style="background-color: #0b5fa8"
                             >
                               <span> BUY NOW </span>
                             </a>
@@ -1970,6 +1971,7 @@
                                       href="buylink"
                                       target="_blank"
                                       data-text="$ETHA"
+                                      style="background-color: #0b5fa8"
                                     >
                                       <span> BUY NOW </span>
                                     </a>
@@ -3561,6 +3563,7 @@
                         class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-animation-grow elementor-repeater-item-513228a"
                         href="tglink"
                         target="_blank"
+                        style="background-color: #0b5fa8"
                       >
                         <span class="elementor-screen-only">Telegram</span>
                         <svg
@@ -3579,6 +3582,7 @@
                         class="elementor-icon elementor-social-icon elementor-social-icon-x-twitter elementor-animation-grow elementor-repeater-item-20092e1"
                         href="twitterlink"
                         target="_blank"
+                        style="background-color: #0b5fa8"
                       >
                         <span class="elementor-screen-only">X-twitter</span>
                         <svg
