--- a/index.html
+++ b/index.html
@@ -1754,10 +1754,14 @@
                             decoding="async"
                             width="364"
                             height="357"
-                            src="/logo.jpg"
+                            src="/m-logo.png"
                             class="attachment-large size-large wp-image-39"
                             alt=""
-                            style="border-radius: 6px"
+                            style="
+                              border-radius: 50%;
+                              width: 80px;
+                              height: 80px;
+                            "
                             sizes="(max-width: 364px) 100vw, 364px"
                           />
                         </div>
